# abl-language-server

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  abl.toml
.github/workflows/: ci.yml  release.yml
playground/: main.p  schema.df
playground/includes/: include.i  zmsubdirs.i
playground/includes/zm/: zm.i  zm_ceny.i
playground/propath/: include.i
src/: backend.rs  config.rs  main.rs
src/analysis/: buffers.rs  builtins.rs  completion.rs  completion_support.rs  definition.rs  definitions.rs  df.rs  formatting.rs  functions.rs  hover.rs  includes.rs  local_tables.rs  mod.rs  schema.rs  schema_lookup.rs  scopes.rs  semantic_tokens.rs  signature.rs  types.rs  variables.rs
src/analysis/diagnostics/: config.rs  functions.rs  mod.rs  semantic.rs  symbols.rs  syntax.rs  types.rs
src/handlers/: completion.rs  definition.rs  diagnostics.rs  formatting.rs  hover.rs  mod.rs  references.rs  semantic_tokens.rs  signature.rs  sync.rs  tokens.rs
src/utils/: mod.rs  paths.rs  position.rs  text_sync.rs  ts.rs
