[package]
name = "abl-language-server"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.5"
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = "6.1.0"
log = "0.4.14"
anyhow = "1.0.93"
tree-sitter = "0.26.3"
tree-sitter-abl = { git = "https://github.com/usagi-coffee/tree-sitter-abl" }
